--- a/WebApp/dotnet-web.csproj
+++ b/WebApp/dotnet-web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.3.0-beta.1" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.2.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0-beta.2" />
     <PackageReference Include="Microsoft.Extensions.Azure" Version="1.1.0" />
